Wed Dec 22 11:03:34 2004  George Lebl <jirka@5z.com>

	* src/gnome-genius.c, src/calc.[ch], src/funclib.c: some help fixes,
	  remove the old manual code and add a "Help on Function" menu entry.

Wed Dec 22 10:24:05 2004  George Lebl <jirka@5z.com>

	* help/C/*.xml: update the documentation a bit.

Tue Dec 21 18:53:54 2004  George Lebl <jirka@5z.com>

	* help/C/gel-operator-list.xml: make the list of operators an
	  actual list

	* help/C/gel-separator.xml,genius.xml: reorganize a tiny bit

Tue Dec 21 18:13:52 2004  George Lebl <jirka@5z.com>

	* configure.in, Makefile.am, src/gnome-genius.c, help/*:
	  Docbookize the manual, patch and docbook by Kai Willadsen
	  <kaiw@itee.uq.edu.au>

	* src/funclib.c, src/calc.c: correct some help problems

	* src/gnome-genius.c: don't show the "manual" menu entry since we
	  now just show the help files directly.

	* src/calc.[ch], src/genius.c, src/gnome-genius.c, src/funclib.c:
	  Display the help functions and the manual

Fri Dec 17 09:58:48 2004  George Lebl <jirka@5z.com>

	* src/lexer.l: remove the warning killing hack since it doesn't work

Thu Nov 11 10:01:31 2004  George Lebl <jirka@5z.com>

	* lib/statistics/basic.gel: Add GaussFunction (normal curve),
	  GaussDistribution (area under the normal curve)

Tue Nov 09 11:28:26 2004  George Lebl <jirka@5z.com>

	* src/calc.[ch], src/compil.c, src/eval.c, src/funclib.c, src/mpwrap.c,
	  src/mpzextra.c:  Fix issues with strtok reentrancy by using
	  strtok_r, should fix some issues with the library functions where
	  rationals were used.  Also the evalhook calling logic is changed a
	  tiny bit

	* src/funclib.c, lib/calculus/integration.gel: Make
	  CompositeSimpsonsRule built in for speed, fix issues
	  when n is odd (add 1 in that case) and add
	  CompositeSimpsonsRuleTolerance

Fri Nov 05 2004 Amanpreet Singh Alam <aalam@redhat.com>

	* ALL_LINUGUS: pa (Punjabi) Language is added

Wed Sep 22 11:05:07 2004  George Lebl <jirka@5z.com>
