@@ -1,3 +1,9 @@
+Wed Dec 22 11:21:02 2004  George Lebl <jirka@5z.com>
+
+	* src/gnome-genius.c, src/eval.[ch], src/calc.c: get similar ids if
+	  function is not documented and check for the function being
+	  documented in the gui help on function dialog.
+
 Wed Dec 22 11:03:34 2004  George Lebl <jirka@5z.com>
 
 	* src/gnome-genius.c, src/calc.[ch], src/funclib.c: some help fixes,
